# mpu9250-i2c

./: Cargo.toml  README.md
.cargo/: config
examples/: ahrs.rs  calibrate.rs  mpu9250.rs
examples/print/: mod.rs
src/: calibration.rs  i2c_tools.rs  lib.rs  mag.rs  mpu9250.rs  vector.rs
